<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">Everything your city</string>
    <string name="powered_by">Powered by Dulanjali Senarathna</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACES</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>


    <!-- Strings for on boarding screen -->

    <!-- Titles -->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add missing Place</string>
    <string name="fourth_slide_title">Sit Back and Enjoy</string>

    <!-- Descriptions -->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform </string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about  </string>

    <!-- Buttons -->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!-- Strings for dashboard -->

    <!-- Categories -->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="education">Education</string>
    <string name="car_rent">Car Rent</string>
    <string name="expand_all">Expand All</string>
    <string name="hospital">Hospitals</string>

    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>

    <!-- Titles and descriptions -->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the Locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search..</string>

    <!-- General Strings -->
    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services!</string>
    <string name="create_account">Create Account</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="email">Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>

    <!-- OTP Screen -->
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on\n+92333</string>
    <string name="forget_password_detail">Provide your account\'s email for which you want to reset your password!</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password?</string>
    <string name="make_selection">Make Selection</string>
    <string name="enter_email">Enter Phone</string>
    <string name="via_sms">via sms</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">Your identity has been verified! Set your new password</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_success_message">Your password has been updated</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
