<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            />

        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/ic_search_black_24dp"
            />
        <item
            android:id="@+id/nav_all_categories"
            android:title="@string/all_categories"
            android:icon="@drawable/ic_featured_play_list_black_24dp"
            />
        <item
            android:id="@+id/nav_add_missing_place"
            android:title="@string/add_missing_place"
            android:icon="@drawable/ic_location_on_black_24dp"
            />

    </group>

    <item
        android:title="Profile">

        <menu>
            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/login"
                    />

                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/profile"
                    />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout"
                    />

            </group>
        </menu>

    </item>

    <item
        android:title="Categories">

        <menu>
            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_restaurants"
                    android:title="@string/restaurants"
                    android:icon="@drawable/ic_restaurant_black_24dp"
                    />

                <item
                    android:id="@+id/nav_bank"
                    android:title="@string/banks"
                    android:icon="@drawable/ic_account_balance_black_24dp"
                    />
                <item
                    android:id="@+id/nav_education"
                    android:title="@string/education"
                    android:icon="@drawable/ic_school_black_24dp"
                    />
                <item
                    android:id="@+id/nav_shop"
                    android:title="@string/shops"
                    android:icon="@drawable/ic_shop_black_24dp"
                    />

            </group>
        </menu>

    </item>

    <item
        android:title="Share">

        <menu>
            <group
                android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/ic_share_black_24dp"
                    />

                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/ic_rate_review_black_24dp"
                    />


            </group>
        </menu>

    </item>

</menu>