<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.ForgetPassword"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection_detail"
            android:textSize="18sp"
            android:fontFamily="@font/muli" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/lightWhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_phone_iphone_black_24dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="20sp"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/mobile_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+94713725452"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_below="@id/mobile_title" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightWhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_email_black_24dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="20sp"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/mail_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="support@gmail.com"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_below="@id/mail_title" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>